@startuml analysis-object-model
!pragma layout smetana
title TripTailor - Analysis Object Model

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 10
skinparam defaultFontName Arial
skinparam ArrowColor #475569
skinparam class {
  BackgroundColor #EFF6FF
  BorderColor #2563EB
  FontColor #0F172A
}

class Traveler <<entity>> {
  id: UUID
  email: String [0..1]
  passwordHash: String [0..1]
  isDemo: Boolean
  createdAt: Instant
}

class Trip <<entity>> {
  id: UUID
  destination: String
  startDate: LocalDate
  endDate: LocalDate
  vibe: String
}

class Schedule <<value object>>

class Day <<entity>> {
  id: UUID
  dayNumber: Integer
  date: LocalDate
}

class Activity <<entity>> {
  id: UUID
  timeBlock: TimeBlock
  title: String
  description: String
  durationMinutes: Integer
  isIndoor: Boolean [0..1]
  tags: ActivityTag [0..*]
}

enum TimeBlock {
  MORNING
  NOON
  AFTERNOON
  EVENING
  NIGHT
}

enum ActivityTag {
  OUTDOOR
  INDOOR
  CULTURAL
  SPORTY
  RELAXING
  ADVENTUROUS
  FOOD
  SHOPPING
  ENTERTAINMENT
  FAMILY_FRIENDLY
  PARTY
}

Traveler "1" -- "0..*" Trip : owns >
Trip "1" *-- "1" Schedule
Schedule "1" *-- "1..*" Day
Day "1" *-- "0..*" Activity
Activity --> "1" TimeBlock
Activity --> "0..*" ActivityTag

@enduml
